--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
     "antd": "^5.5.1",
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.8",
     "firebase": "^9.22.1",
     "immer": "^10.0.2",
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
+    "cypress": "^13.6.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
