--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "@types/mocha": "^10.0.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-highlight-words": "^0.16.4",
